# Self-Hosted-Docker-Deployer

./: .gitignore  LICENSE  README.md  install-docker.sh  install.bat  install.ps1  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: Deployment_Assistant_Design_Document.md  pirate_mode.md
src/easy_docker_deploy/: __init__.py  __main__.py
src/easy_docker_deploy/cli/: __init__.py  main.py
src/easy_docker_deploy/cli/commands/: deploy.py  list.py  pirate.py
src/easy_docker_deploy/config/: docker.py  pirate.py  settings.py  yaml_manager.py
src/easy_docker_deploy/docker/: deployment.py  generator.py  manager.py
src/easy_docker_deploy/generator/: compose.py
src/easy_docker_deploy/orchestrator/: deployer.py
src/easy_docker_deploy/parser/: github_parser.py  markdown_parser.py  test_live_parser.py
src/easy_docker_deploy/services/: deployment_service.py  parser_service.py
src/easy_docker_deploy/templates/: pirate_compose.yml.j2
src/easy_docker_deploy/utils/: autofix.py  caching.py  diagnostics.py  docker.py  exceptions.py  logging.py  resource_monitor.py  theme_manager.py  validation.py  visualizer.py  yaml_manager.py
src/easy_docker_deploy/wizard/: __init__.py  interactive.py
tests/: test_parser.py
tests/test_config/: test_pirate.py
tests/test_utils/: test_caching.py  test_logging.py  test_validation.py
